# Scarlett

./: .gitignore  .vs  CMakeLists.txt  LICENSE  Makefile  README.md
src/: common.hpp  global.cpp  global.hpp  llvm.hpp  main.cpp  scarpch.hpp  settings.hpp  span.cpp  span.hpp
src/Core/: Core.hpp  Driver.cpp  Driver.hpp  Error.hpp  Log.cpp  Log.hpp  Session.cpp  Session.hpp
src/Parse/: Interner.cpp  Interner.hpp  Parser.cpp  Parser.hpp  Span.hpp  Token.cpp  Token.hpp
src/Parse/AST/: AST.hpp  LLVMVisitor.cpp  LLVMVisitor.hpp  PrintVisitor.cpp  PrintVisitor.hpp  SymbolTable.hpp  TypeCheckVisitor.cpp  TypeCheckVisitor.hpp  VerifyVisitor.cpp  VerifyVisitor.hpp
src/Parse/Lex/: Codepoint.cpp  Codepoint.hpp  Lexer.cpp  Lexer.hpp  SourceFile.cpp  SourceFile.hpp  UTFReader.cpp  UTFReader.hpp
src/ast/: ast.cpp  ast.hpp  llvm.hpp
src/ast/visitor/: llvm_opt_visitor.cpp  llvm_opt_visitor.hpp  llvm_visitor.cpp  llvm_visitor.hpp  visitor.hpp
src/cmd_args/: arg_tree.hpp  args.cpp  args.hpp  option_def.hpp
src/driver/: driver.cpp  driver.hpp  session.cpp  session.hpp
src/error/: emitter.cpp  emitter.hpp  error.cpp  error.hpp  fmt_help.hpp  log_builder.hpp  log_manager.cpp  log_manager.hpp
src/error/sinks/: sink_base.hpp  sinks.hpp
src/errors/: compile_err.cpp  compile_err.hpp  errors.cpp  errors.hpp  lex_err.cpp  lex_err.hpp  parse_err.cpp  parse_err.hpp
src/files/: codepoint.cpp  codepoint.hpp  source.cpp  source_file.cpp  source_file.hpp  source_map.cpp  source_map.hpp  utf_reader.cpp  utf_reader.hpp
src/front/: ast.cpp  ast.hpp  interner.cpp  interner.hpp  parser.cpp  parser.hpp  sym_table.hpp  token.cpp  token.hpp  token_type.cpp  token_type.hpp
src/front/err/: error.cpp  error.hpp
src/front/files/: source.cpp  source_file.hpp
src/front/lex/: codepoint.cpp  codepoint.hpp  lexer.cpp  lexer.hpp  utf_reader.cpp  utf_reader.hpp
src/front/visit/: llvm_visitor.cpp  llvm_visitor.hpp  visitor.hpp
src/log/: fmt_help.hpp  log.hpp  log_builder.hpp  log_manager.cpp  log_manager.hpp  logger.cpp  logger.hpp  logging.hpp  registry.cpp  registry.hpp
src/log/format/: default_fmt.cpp  default_fmt.hpp  format_help.hpp  formatter.hpp
src/log/sinks/: console_vars.hpp  msvc_sink.hpp  sink.hpp  stdout_sink.hpp
src/log/util/: logger_ex.hpp
src/parse/: ast.cpp  ast.hpp  parser.cpp  parser.hpp  span.hpp  token.cpp  token.hpp
src/parse/error/: error.hpp
src/parse/lex/: bump_reader.cpp  bump_reader.hpp  codepoint.cpp  codepoint.hpp  lexer.cpp  lexer.hpp  token.cpp  token.hpp  token_type.cpp  token_type.hpp  utf_reader.cpp  utf_reader.hpp
src/symbols/: interner.hpp  sym_table.hpp
src/util/: early_exit.hpp  err_codes.hpp  error.hpp  interner.cpp  interner.hpp  magic_enum.hpp  range.hpp  ranges.hpp  settings.hpp  target_detect.hpp  version.hpp
tests/: main.sc
